@@ -1,14 +1,19 @@
 package com.sena.eproductiva.manager.services;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import com.sena.eproductiva.manager.models.dto.CentroFormacionDto;
+import com.sena.eproductiva.manager.models.dto.PageDto;
 import com.sena.eproductiva.manager.models.entitys.Centro;
 import com.sena.eproductiva.manager.repositories.CentroFormacionRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
+
 
 @Service
 public class CentroFormacionService {
@@ -23,26 +28,51 @@ public class CentroFormacionService {
         return centroFormacionRepository.findById(id).orElse(null);
     }
 
-    public Centro updateCentro(Centro centroFormacionEntity) {
-        return centroFormacionRepository.save(centroFormacionEntity);
+    public Centro updateCentro(CentroFormacionDto centroFormacionDto,Long id) {
+        Centro centro = this.getCentroFormacionById(id);
+        if(Objects.isNull(centro))
+            centro = new Centro();
+        centro.setNombre(centroFormacionDto.getNombre());
+        centro.setEnabled(centroFormacionDto.isEnabled());
+        return centroFormacionRepository.save(centro);
     }
 
-    public Centro createCentro(Centro centroFormacionEntity) {
-        return centroFormacionRepository.save(centroFormacionEntity);
+    public Centro createCentro(CentroFormacionDto centroFormacionDto) {
+        return updateCentro(centroFormacionDto, null);
     }
 
-    public void deleteCentro(long id) {
-        centroFormacionRepository.deleteById(id);
+    public CentroFormacionDto transformDto(Centro centro){
+        CentroFormacionDto dto = new CentroFormacionDto();
+        dto.setUuid(centro.getUuid());
+        dto.setNombre(centro.getNombre());
+        dto.setEnabled(centro.isEnabled());
+        return dto;
     }
 
-    public List<CentroFormacionDto> getAllCentroFormacionDtos() {
-        return this.getAllCentroFormacion().stream().map(centro -> {
-            CentroFormacionDto dto = new CentroFormacionDto();
-            dto.setUuid(centro.getUuid());
-            dto.setNombre(centro.getNombre());
-            dto.setEnabled(centro.isEnabled());
-            return dto;
-        }).collect(Collectors.toList());
+    public List<CentroFormacionDto> transformListDtos(List<Centro> centros){
+        return centros.stream().map(this::transformDto).toList();
+    }
+
+    public Page<Centro> getPageCentro(Pageable pageable){
+        return centroFormacionRepository.findAll(pageable);
+    }
+
+    public PageDto<CentroFormacionDto> getPageDtoCentro(int page, int size){
+        Page<Centro> centro = getPageCentro(PageRequest.of(page, size));
+        PageDto<CentroFormacionDto> pageDto = new PageDto<>();
+        pageDto.setContent(this.transformListDtos(centro.getContent()));
+        return pageDto;
+    }
+
+    public boolean validateExist(CentroFormacionDto centro){
+        return Objects.nonNull(centro.getNombre())||
+            Objects.nonNull(centro.getUuid());
+    }
+
+    public void disableCentro(Long id){
+        Centro centro = this.getCentroFormacionById(id);
+        centro.setEnabled(false);
+        centroFormacionRepository.save(centro);
     }
 
 }
